# zephyr_ldc_hello

./: .gitignore  CMakeLists.txt  Makefile  README.md  dub.sdl  hello.d  west.yml
.github/workflows/: build.yml
app/: CMakeLists.txt  dub.sdl  prj.conf  sample.yaml
app/src/: hello.d  main.c
d_src/: hello.d
src/: hello.d  main.c
